--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -554,7 +554,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per week</td>
+      <td>Dozens per month</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -578,7 +578,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>hundreds per week</td>
+      <td>Dozens per month</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -602,7 +602,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>hundreds per day</td>
+      <td>Dozens per month</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -626,7 +626,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>hundreds per day</td>
+      <td>Dozens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -650,7 +650,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per month</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -674,7 +674,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>hundreds per day</td>
+      <td>Dozens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -698,7 +698,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>once per month</td>
+      <td>Dozens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -746,7 +746,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per week</td>
+      <td>Dozens per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -770,7 +770,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>hundreds per day</td>
+      <td>Dozens per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -794,7 +794,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Dozens per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -818,7 +818,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -844,7 +844,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -870,7 +870,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -896,7 +896,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per week</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -922,7 +922,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -948,7 +948,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>units per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -974,7 +974,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>units per month</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1001,7 +1001,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1026,7 +1026,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1051,7 +1051,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1076,7 +1076,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1101,7 +1101,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per day</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1126,7 +1126,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>tens per month</td>
+      <td>Once per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1175,22 +1175,158 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td> SELECT02 needs to be fast because it is executed many times;
-	      it doesn't require range query support;
-	      cardinality is high because 'email' is an unique key;
+      <td> SELECT02 needs to be fast because it is executed many times; 
+	      it doesn't require range query support; 
+	      cardinality is high because 'email' is an unique key; 
 	      not a good candidate for clustering.</td>
     </tr>
     <tr>
       <td colspan="2">
         <code>
-          CREATE INDEX emailUser ON "UserTable" USING hash (email);
+          CREATE INDEX emailUser ON "UserTable" USING hash (email); 
         </code>
       </td>
     </tr>
   </tbody>
 </table>
 
+<table>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>DX02</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>SELECT03</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>Task</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>idUser</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>Hash</td>
+    </tr>
+    <tr>
+      <td><b>Cardinality</b></td>
+      <td>Medium</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>Yes</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td> Table is very large; SELECT03, used to search an users tasks, has to be fast because it's executed many times; 
+	      doesn't need range query support; 
+	      cardinality is medium so it's a good candidate for clustering.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+           CREATE INDEX taskUser ON Task USING hash(idUser); 
+        </code>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
+<table>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>DX03</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>SELECT04</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>Project</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>idUser</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>Hash</td>
+    </tr>
+    <tr>
+      <td><b>Cardinality</b></td>
+      <td>Medium</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>Yes</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td> SELECT03, used to search an users tasks, has to be fast because it's executed several times; 
+	      doesn't need range query support; 
+	      cardinality is medium therefor it's a good candidate for clustering.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+           CREATE INDEX projectUser ON Project USING hash(idUser); 
+        </code>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>DX04</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>SELECT03</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>Task</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>deadline</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>B-Tree</td>
+    </tr>
+    <tr>
+      <td><b>Cardinality</b></td>
+      <td>Medium</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>Yes</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td> To allow searching tasks by deadline faster; 
+	      It's clustered to allow for quick range queries; 
+	      cardinality is medium.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+           CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);  
+        </code>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 ### 2.2. Full-text Search Indices
 
@@ -1446,28 +1582,35 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can create Posts in it's Forum</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
+          $BODY$
+          BEGIN
+            IF NOT EXISTS (
+              SELECT Joined.idJoined FROM Joined
+              WHERE (new.idUser = idUser AND new.idProject = idProject))
+            THEN
+              RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
+            ELSE
+              INSERT INTO ForumPost(creationDate, lastEditDate, title, content, idProject, idUser)
+              VALUES (new.creationDate, new.lastEditDate, new.title, new.content, new.idProject, new.idUser);
+            END IF;
+            RETURN NEW;
+          END
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreatePost BEFORE INSERT ON plenum.ForumPost
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertPost();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
-
-```SQL
-CREATE OR REPLACE FUNCTION plenum.insertPost() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-    IF NOT EXISTS (
-      SELECT * FROM plenum.Joined
-      WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
-    THEN
-      RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
-    END IF;
-    RETURN NEW;
-  END
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onCreatePost BEFORE INSERT ON plenum.ForumPost
-FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertPost();
-```
 
 <table>
   <tbody>
@@ -1479,28 +1622,35 @@ EXECUTE PROCEDURE plenum.insertPost();
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can Reply in it's Forum</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT idJoined FROM plenum.Joined, plenum.ForumPost
+                WHERE (new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
+              ELSE
+                INSERT INTO plenum.Reply(creationDate, lastEditDate, content, idPost, idUser)
+                VALUES (new.creationDate, new.lastEditDate, new.content, new.idPost, new.idUser);
+              END IF;
+              RETURN NEW;
+            END
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertReply();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
-
-```SQL
-CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-    IF NOT EXISTS (
-      SELECT * FROM plenum.Joined, plenum.ForumPost
-      WHERE new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser)
-    THEN
-      RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
-    END IF;
-    RETURN NEW;
-  END
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
-FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertReply();
-```
 
 <table>
   <tbody>
@@ -1512,28 +1662,35 @@ EXECUTE PROCEDURE plenum.insertReply();
       <td><b>Trigger description</b></td>
       <td>Only a user who has Joined a Project can create Comments for a Project Task</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT idJoined FROM plenum.Joined, plenum.Task
+                WHERE (new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+              ELSE
+                INSERT INTO plenum.Comment(creationDate, lastEditDate, idTask, idUser, idParent)
+                VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
+              END IF;
+              RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertComent();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
-
-```SQL
-CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-    IF NOT EXISTS (
-      SELECT * FROM plenum.Joined, plenum.Task
-      WHERE new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser)
-    THEN
-      RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
-    END IF;
-    RETURN NEW;
-  END;
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
-FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertComent();
-```
 
 <table>
   <tbody>
@@ -1545,28 +1702,30 @@ EXECUTE PROCEDURE plenum.insertComent();
       <td><b>Trigger description</b></td>
       <td>Only a User who was Assigned to a Task can create a Close Request for it.</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT * FROM plenum.Assigned
+                WHERE (new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+              ELSE
+                INSERT INTO plenum.Comment(creationDate, lastEditDate, idTask, idUser, idParent)
+                VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
+              END IF
+          CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertCloseRequest();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
-
-```SQL
-CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-    IF NOT EXISTS (
-      SELECT * FROM plenum.Assigned
-      WHERE new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser)
-    THEN
-      RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
-    END IF;
-    RETURN NEW;
-  END;
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
-FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertCloseRequest();
-```
 
 <table>
   <tbody>
@@ -1578,28 +1737,35 @@ EXECUTE PROCEDURE plenum.insertCloseRequest();
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can create Tasks for It.</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT Joined.idJoined FROM plenum.Joined
+                WHERE (new.idUser = Joined.idUser AND new.idProject = Joined.idProject))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
+              ELSE
+                INSERT INTO plenum.Task(creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject)
+                VALUES (new.creationDate, new.lastEditDate, new.title, new.description, new.deadline, new.completed, new.completetionDate, new.idUser, new.idProject);
+              END IF;
+              RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertTask();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
-
-```SQL
-CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-    IF NOT EXISTS (
-      SELECT * FROM plenum.Joined
-      WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
-    THEN
-      RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
-    END IF;
-    RETURN NEW;
-  END;
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
-FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertTask();
-```
 
 <table>
   <tbody>
@@ -1611,28 +1777,35 @@ EXECUTE PROCEDURE plenum.insertTask();
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can be assigned to it's Tasks.</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT Joined.idJoined FROM plenum.Joined, plenum.Task
+                WHERE (new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
+              ELSE
+                INSERT INTO plenum.Assigned(idUser, idTask)
+                VALUES (new.idUser, new.idTask);
+              END IF;
+              RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertAssigned();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
-
-```SQL
-CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-    IF NOT EXISTS (
-      SELECT * FROM plenum.Joined, plenum.Task
-      WHERE new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject)
-    THEN
-      RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
-    END IF;
-    RETURN NEW;
-  END;
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
-FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertAssigned();
-```
 
 <table>
   <tbody>
@@ -1644,29 +1817,36 @@ EXECUTE PROCEDURE plenum.insertAssigned();
       <td><b>Trigger description</b></td>
       <td>A Project can only be private while the Owner is a premium User.</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+            IF NOT EXISTS (
+              SELECT * FROM plenum.Joined, plenum.UserTable
+              WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
+            THEN
+              RAISE EXCEPTION 'A Project can only be private while the Owner is a premium User.';
+            ELSE
+              INSERT INTO plenum.Project(idProject, creationDate, name, description, private)
+              VALUES (new.idProject, new.creationDate, new.name, new.description, new.private);
+            END IF;
+            RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateProject BEFORE INSERT OR UPDATE ON plenum.Project
+          FOR EACH ROW
+          WHEN (NEW.private IS TRUE)
+          EXECUTE PROCEDURE plenum.canProjectBePrivate();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
-
-```SQL
-CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-  IF NOT EXISTS (
-    SELECT * FROM plenum.Joined, plenum.UserTable
-    WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
-  THEN
-    RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
-  END IF;
-  RETURN NEW;
-  END;
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onCreateProject BEFORE UPDATE ON plenum.Project
-FOR EACH ROW
-WHEN (NEW.private IS TRUE)
-EXECUTE PROCEDURE plenum.canProjectBePrivate();
-```
 
 <table>
   <tbody>
@@ -1678,29 +1858,37 @@ EXECUTE PROCEDURE plenum.canProjectBePrivate();
       <td><b>Trigger description</b></td>
       <td>A Project can only be private while the Owner is a premium User.</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+            IF EXISTS (
+              SELECT * FROM plenum.Joined, plenum.Project
+              WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND new.idProject = Joined.idProject AND new.idProject = Project.idProject AND Project.private = true)
+            THEN
+              RAISE EXCEPTION 'A Project can only be private while the Owner is a premium User.';
+            ELSE
+              INSERT INTO plenum.UserTable(username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry)
+              VALUES (new.username, new.password, new.email, new.premium, new.banned, new.name, new.gender, new.address, new.institution, new.description, new.birthDate, new.idCountry);
+            END IF;
+            RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onUpdateUser BEFORE INSERT OR UPDATE ON plenum.UserTable
+          FOR EACH ROW
+          WHEN (new.premium = false)
+          EXECUTE PROCEDURE plenum.updateUserTable();
+
+        </code>
+      </td>
+    </tr>
   </tbody>
 </table>
 
-```SQL
-CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
-$BODY$
-  BEGIN
-  IF EXISTS (
-    SELECT * FROM plenum.Joined, plenum.Project
-    WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND Project.idProject = Joined.idProject AND Project.private = true)
-  THEN
-    RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
-  END IF;
-  RETURN NEW;
-  END;
-$BODY$
-LANGUAGE plpgsql;
-
-CREATE TRIGGER onUpdateUser BEFORE UPDATE ON plenum.UserTable
-FOR EACH ROW
-WHEN (new.premium = false)
-EXECUTE PROCEDURE plenum.updateUserTable();
-```
 
 ## 4. Complete SQL Code
 
