all Frequent Queries :ok_hand:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -46,7 +46,7 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
             SELECT username, email, gender, description
-            FROM UserTable;
+            FROM plenum.UserTable;
           </code>
         </td>
       </tr>
@@ -71,7 +71,7 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT username, email, gender, description
-          FROM UserTable
+          FROM plenum.UserTable
           WHERE UserTable.idUser= $idUser;
           </code>
         </td>
@@ -87,7 +87,7 @@ This artefact contains the physical schema of the database, the identification a
       </tr>
       <tr>
           <td><b>Query description</b></td>
-          <td>Get All User's Tasks</td>
+          <td>Get All User's Assigned Tasks Name</td>
       </tr>
       <tr>
           <td><b>Query frequency</b></td>
@@ -96,10 +96,10 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT title
-          FROM Task
-          WHERE Task.idUser=$idUser
-          ORDER BY deadline ASC;
+          SELECT DISTINCT Task.title
+          FROM plenum.Assigned, plenum.Task, plenum.UserTable
+          WHERE Assigned.idUser=$idUser
+          AND Assigned.idTask = Task.idTask;
           </code>
         </td>
       </tr>
@@ -114,7 +114,7 @@ This artefact contains the physical schema of the database, the identification a
       </tr>
       <tr>
           <td><b>Query description</b></td>
-          <td>Get All User's Projects</td>
+          <td>Get All User's Projects Name</td>
       </tr>
       <tr>
           <td><b>Query frequency</b></td>
@@ -123,7 +123,8 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT Project.name FROM Project, Joined, UserTable
+          SELECT Project.name
+          FROM plenum.Project, plenum.Joined, plenum.UserTable
           WHERE Project.idProject=Joined.idProject
           AND Joined.idUser=UserTable.idUser
           AND UserTable.idUser = $idUser;
@@ -151,7 +152,7 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT premium
-          FROM UserTable
+          FROM plenum.UserTable
           WHERE UserTable.idUser = $idUser;
           </code>
         </td>
@@ -177,8 +178,9 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT startDate, duration, name
-          FROM PremiumSignature, UserTable
-          WHERE UserTable.idUser= PremiumSignature.idUser;
+          FROM plenum.PremiumSignature, plenum.UserTable
+          WHERE UserTable.idUser= PremiumSignature.idUser
+          AND UserTable.idUser = $idUser;
           </code>
         </td>
       </tr>
@@ -203,7 +205,7 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT banned
-          FROM UserTable
+          FROM plenum.UserTable
           WHERE UserTable.idUser = $idUser;
           </code>
         </td>
@@ -229,8 +231,8 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT startDate, duration, motive
-          FROM UserTable, BannedRecord
-          WHERE BannedRecord.idUser = $idUser
+          FROM plenum.UserTable, plenum.BannedRecord
+          WHERE UserTable.idUser = $idUser
           AND UserTable.idUser = BannedRecord.idUser;
           </code>
         </td>
@@ -256,7 +258,7 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT creationDate, name, description
-          FROM Project
+          FROM plenum.Project
           WHERE idProject = $idProject;
           </code>
         </td>
@@ -282,7 +284,7 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT private
-          FROM Project
+          FROM plenum.Project
           WHERE idProject = $idProject;
           </code>
         </td>
@@ -307,10 +309,10 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT DISTINCT username, name, email
-          FROM UserTable, Joined, Project
+          SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
+          FROM plenum.UserTable, plenum.Joined, plenum.Project
           WHERE Joined.idProject=$idProject
-          AND Joined.role == 'Owner'
+          AND Joined.role = 'Owner'
           AND Joined.idUser=UserTable.idUser;
           </code>
         </td>
@@ -335,10 +337,10 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT DISTINCT username, name, email
-          FROM UserTable, Joined, Project
+          SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
+          FROM plenum.UserTable, plenum.Joined, plenum.Project
           WHERE Joined.idProject=$idProject
-          AND Joined.role =='Coordinator'
+          AND Joined.role = 'Coordinator'
           AND Joined.idUser=UserTable.idUser;
           </code>
         </td>
@@ -363,10 +365,10 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT DISTINCT username, name, email
-          FROM UserTable, Joined, Project
+          SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
+          FROM plenum.UserTable, plenum.Joined, plenum.Project
           WHERE Joined.idProject=$idProject
-          AND Joined.role =='Member'
+          AND Joined.role = 'Member'
           AND Joined.idUser=UserTable.idUser;
           </code>
         </td>
@@ -391,10 +393,10 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT title, lastEditDate, name
-          FROM ForumPost, UserTable
+          SELECT ForumPost.title, ForumPost.creationDate, ForumPost.lastEditDate
+          FROM plenum.ForumPost, plenum.UserTable
           WHERE ForumPost.idUser = UserTable.idUser
-          AND UserTable.idUser = $idUser;
+          AND UserTable.idUser = $idUser
           ORDER BY ForumPost.lastEditDate;
           </code>
         </td>
@@ -410,7 +412,7 @@ This artefact contains the physical schema of the database, the identification a
       </tr>
       <tr>
           <td><b>Query description</b></td>
-          <td>Get User's Forum Post ( by lastEditDate )</td>
+          <td>Get User's Post Replies</td>
       </tr>
       <tr>
           <td><b>Query frequency</b></td>
@@ -419,10 +421,9 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT UserTable.name, Reply.creationDate, Reply.content, Reply.idPost
-          FROM Reply, ForumPost, UserTable
-          WHERE Reply.idPost = $idPost
-          AND Reply.idUser = UserTable.idUser;
+          SELECT DISTINCT Reply.creationDate, Reply.content, Reply.idPost
+          FROM plenum.Reply, plenum.ForumPost, plenum.UserTable
+          WHERE Reply.idUser = $idUser;
           </code>
         </td>
       </tr>
@@ -447,9 +448,10 @@ This artefact contains the physical schema of the database, the identification a
         <td colspan="2">
           <code>
           SELECT title, deadline
-          FROM UserTable, Task, Assigned,
-          WHERE Assigned.idUser = $idUser
+          FROM plenum.UserTable, plenum.Task, plenum.Assigned
+          WHERE UserTable.idUser = 1
           AND Assigned.idUser = UserTable.idUser
+          AND Assigned.idTask = Task.idTask
           AND deadline > CURRENT_DATE
           ORDER BY deadline ASC;
           </code>
@@ -475,11 +477,11 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT Task.title
-          FROM Task, Project
+          SELECT Task.title, Task.deadline
+          FROM plenum.Task, plenum.Project
           WHERE Project.idProject = $idProject
           AND Task.idProject = Project.idProject
-          AND Task.completed=FALSE;
+          AND Task.completed=false;
           </code>
         </td>
       </tr>
@@ -494,18 +496,20 @@ This artefact contains the physical schema of the database, the identification a
       </tr>
       <tr>
           <td><b>Query description</b></td>
-          <td>Get Task Information</td>
+          <td>Get All Project's Completed Tasks</td>
       </tr>
       <tr>
           <td><b>Query frequency</b></td>
-          <td>hundreds per day</td>
+          <td>tens per day</td>
       </tr>
       <tr>
         <td colspan="2">
           <code>
-          SELECT title, creationDate,lastEditDate, description, deadline
-          FROM Task
-          WHERE Task.idTask= $idTask;
+          SELECT Task.title, Task.deadline
+          FROM plenum.Task, plenum.Project
+          WHERE Project.idProject = $idProject
+          AND Task.idProject = Project.idProject
+          AND Task.completed=true;
           </code>
         </td>
       </tr>
@@ -520,6 +524,56 @@ This artefact contains the physical schema of the database, the identification a
       </tr>
       <tr>
           <td><b>Query description</b></td>
+          <td>Get All Project's Non Assigned Tasks</td>
+      </tr>
+      <tr>
+          <td><b>Query frequency</b></td>
+          <td>tens per day</td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <code>
+          <!-- TODO -->
+          </code>
+        </td>
+      </tr>
+    </tbody>
+</table>
+
+<table>
+  <tbody>
+      <tr>
+          <td><b>Query reference</b></td>
+          <td>SELECT20</td>
+      </tr>
+      <tr>
+          <td><b>Query description</b></td>
+          <td>Get Task Information</td>
+      </tr>
+      <tr>
+          <td><b>Query frequency</b></td>
+          <td>hundreds per day</td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <code>
+          SELECT title, creationDate,lastEditDate, description, deadline
+          FROM plenum.Task
+          WHERE Task.idTask= $idTask;
+          </code>
+        </td>
+      </tr>
+    </tbody>
+</table>
+
+<table>
+  <tbody>
+      <tr>
+          <td><b>Query reference</b></td>
+          <td>SELECT21</td>
+      </tr>
+      <tr>
+          <td><b>Query description</b></td>
           <td>Get Task's Comments</td>
       </tr>
       <tr>
@@ -529,8 +583,8 @@ This artefact contains the physical schema of the database, the identification a
       <tr>
         <td colspan="2">
           <code>
-          SELECT Comment.creationDate, Comment.lastEditDate, Comment.content, name
-          FROM Comment, UserTable, Task
+          SELECT Comment.creationDate, Comment.lastEditDate, Comment.content, UserTable.name, Comment.idParent
+          FROM plenum.Comment, plenum.UserTable, plenum.Task
           WHERE Task.idTask = $idTask
           AND Comment.idUser = UserTable.idUser
           AND Comment.idTask = Task.idTask;
@@ -1175,15 +1229,15 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td> SELECT02 needs to be fast because it is executed many times; 
-	      it doesn't require range query support; 
-	      cardinality is high because 'email' is an unique key; 
+      <td> SELECT02 needs to be fast because it is executed many times;
+	      it doesn't require range query support;
+	      cardinality is high because 'email' is an unique key;
 	      not a good candidate for clustering.</td>
     </tr>
     <tr>
       <td colspan="2">
         <code>
-          CREATE INDEX emailUser ON "UserTable" USING hash (email); 
+          CREATE INDEX emailUser ON "UserTable" USING hash (email);
         </code>
       </td>
     </tr>
